# truskawka

./: .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cdk.json  config.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  schema.py
dto/: auth.py
infra/: README.md  app.py
infra/stack/: infra_stack.py  rds_stack.py  vpc.py
infra/tests/unit/: test_infra_stack.py
migrations/: env.py
migrations/versions/: 80e6a07b112b_.py  c0417a09eba1_.py
models/: __init__.py  birthday_app.py
