[tool.poetry]
name = "truskawka"
version = "0.1.0"
description = ""
authors = ["umatbro <umatbroo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
pydantic = {extras = ["email"], version = "^1.9.0"}
alembic = "^1.7.6"
python-decouple = "^3.6"
fastapi = "0.73.0"
phonenumbers = "^8.12.46"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
