[tool.poetry]
name = "truskawka"
version = "0.1.0"
description = ""
authors = ["umatbro <umatbroo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
pydantic = {extras = ["email"], version = "^1.9.0"}
alembic = "^1.7.6"
python-decouple = "^3.6"
fastapi = "0.70.0"
phonenumbers = "^8.12.46"
psycopg2 = "^2.9.3"
strawberry-graphql = {extras = ["debug-server"], version = "^0.108.2"}


[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
#constructs = ">=10.0.0,<11.0.0"
exceptiongroup = "^1.0.0-rc.3"
aws-cdk-lib = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
